# deepl-scraper-pyppeteer2

./: .flake8  README.md  package.json  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  run-python.bat  run-uvicorn.bat  tbump.toml
.github/workflows/: routine-tests.yml
deepl_scraper_pp/: __init__.py  deepl4a-portalocker.py  deepl_tr.py  get_ppbrowser.py
deepl_scraper_pp2/: __init__.py  deepl_server.py  deepl_tr.py  get_ppbrowser.py-  run_uvicorn.py
tests/: test_deepl_scraper_pp.py  test_deepl_scraper_pp_version.py  test_deepl_tr.py  test_simple.py  x-test_deepl_tr.py
