[tool.poetry]
name = "deepl-scraper-pp"
version = "0.1.2-alpha.0"
description = "scrape deepl via pyppeteer"
authors = ["freemt"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ffreemt/deepl-scraper-pyppeteer"

[tool.poetry.dependencies]
python = "^3.7"
linetimer = "^0.1.4"
pyquery = "^1.4.3"
logzero = "^1.6.3"
get-ppbrowser = {git = "https://github.com/ffreemt/get-ppbrowser.git", rev = "dev"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
tbump = "^6.3.1"
ipython = "^7.21.0"
flake8 = "^3.8.4"
pytest-asyncio = "^0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
