[tool.poetry]
name = "deepl-scraper-pp2"
version = "0.1.0a1"
description = "scrape deepl via pyppeteer2 with para info"
authors = ["freemt"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ffreemt/deepl-scraper-pyppeteer2"

[tool.poetry.dependencies]
python = "^3.8.3"
pyquery = "^1.4.3"
logzero = "^1.6.3"
get-ppbrowser = "^0.1.3"
about-time = "^4.2.1"
uvicorn = "^0.13.4"
fastapi = "^0.89.1"
nest-asyncio = "^1.5.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
pytest-asyncio = "^0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
